--- a/themes/develop/themes/Freesm-Dark/themeStyle.css
+++ b/themes/develop/themes/Freesm-Dark/themeStyle.css
@@ -1163,11 +1163,11 @@ QSizeGrip {
 }
 
 QToolTip {
-    border: 1px solid rgb(0, 0, 0);
+    border: 1px solid #181825;
     color: white;
     padding: 2px;
     border-radius: 3px;
-    background: rgb(44, 44, 44);
+    background: #181825;
 }
 
 QListView {
