--- a/themes/develop/themes/Freesm-Dark/themeStyle.css
+++ b/themes/develop/themes/Freesm-Dark/themeStyle.css
@@ -59,6 +59,7 @@ QToolButton {
     border: 1px solid transparent;
     border-radius: 6px;
     padding: 2px;
+    margin-left: 8px;
 }
 
 QToolButton[popupMode="2"] {
