--- a/program_info/prismlauncher.qrc
+++ b/program_info/prismlauncher.qrc
@@ -1,6 +1,6 @@
 <!DOCTYPE RCC>
 <RCC version="1.0">
     <qresource prefix="/">
-        <file>org.prismlauncher.PrismLauncher.svg</file>
+        <file>org.freesmlauncher.FreesmLauncher.svg</file>
     </qresource>
 </RCC>
