--- a/launcher/resources/fluent_dark/fluent_dark.qrc
+++ b/launcher/resources/fluent_dark/fluent_dark.qrc
@@ -5,6 +5,7 @@
         <file>scalable/about.svg</file>
         <file>scalable/accounts.svg</file>
         <file>scalable/bug.svg</file>
+        <file>scalable/cat.svg</file>
         <file>scalable/centralmods.svg</file>
         <file>scalable/checkupdate.svg</file>
         <file>scalable/copy.svg</file>
