--- a/launcher/resources/backgrounds/backgrounds.qrc
+++ b/launcher/resources/backgrounds/backgrounds.qrc
@@ -1,6 +1,7 @@
 <!DOCTYPE RCC>
 <RCC version="1.0">
     <qresource prefix="/backgrounds">
+        <file alias="miside-screenshot">miside-screenshot.png</file>
         <file alias="typescript">typescript.png</file>
         <file alias="kitteh">kitteh.png</file>
         <file alias="kitteh-xmas">kitteh-xmas.png</file>
