--- a/launcher/ui/MainWindow.ui
+++ b/launcher/ui/MainWindow.ui
@@ -29,16 +29,23 @@
     </property>
    </layout>
   </widget>
-  <widget class="QStatusBar" name="statusBar"/>
+  <widget class="QStatusBar" name="statusBar">
+   <property name="minimumSize">
+    <size>
+     <width>0</width>
+     <height>35</height>
+    </size>
+   </property>
+  </widget>
   <widget class="QToolBar" name="mainToolBar">
    <property name="windowTitle">
     <string>Main Toolbar</string>
    </property>
    <property name="allowedAreas">
-    <set>Qt::BottomToolBarArea|Qt::TopToolBarArea</set>
+    <set>Qt::ToolBarArea::BottomToolBarArea|Qt::ToolBarArea::TopToolBarArea</set>
    </property>
    <property name="toolButtonStyle">
-    <enum>Qt::ToolButtonTextBesideIcon</enum>
+    <enum>Qt::ToolButtonStyle::ToolButtonTextBesideIcon</enum>
    </property>
    <property name="floatable">
     <bool>false</bool>
@@ -64,7 +71,7 @@
     <string>News Toolbar</string>
    </property>
    <property name="allowedAreas">
-    <set>Qt::BottomToolBarArea|Qt::TopToolBarArea</set>
+    <set>Qt::ToolBarArea::BottomToolBarArea|Qt::ToolBarArea::TopToolBarArea</set>
    </property>
    <property name="iconSize">
     <size>
@@ -73,7 +80,7 @@
     </size>
    </property>
    <property name="toolButtonStyle">
-    <enum>Qt::ToolButtonTextBesideIcon</enum>
+    <enum>Qt::ToolButtonStyle::ToolButtonTextBesideIcon</enum>
    </property>
    <property name="floatable">
     <bool>false</bool>
@@ -91,7 +98,7 @@
     <string>Instance Toolbar</string>
    </property>
    <property name="allowedAreas">
-    <set>Qt::LeftToolBarArea|Qt::RightToolBarArea</set>
+    <set>Qt::ToolBarArea::LeftToolBarArea|Qt::ToolBarArea::RightToolBarArea</set>
    </property>
    <property name="iconSize">
     <size>
@@ -100,7 +107,7 @@
     </size>
    </property>
    <property name="toolButtonStyle">
-    <enum>Qt::ToolButtonTextBesideIcon</enum>
+    <enum>Qt::ToolButtonStyle::ToolButtonTextBesideIcon</enum>
    </property>
    <property name="floatable">
     <bool>false</bool>
@@ -131,7 +138,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>27</height>
+     <height>24</height>
     </rect>
    </property>
    <widget class="QMenu" name="fileMenu">
@@ -235,8 +242,7 @@
   </widget>
   <action name="actionMoreNews">
    <property name="icon">
-    <iconset theme="news">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="news"/>
    </property>
    <property name="text">
     <string>More news...</string>
@@ -250,8 +256,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset theme="cat">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="cat"/>
    </property>
    <property name="text">
     <string>&amp;Meow</string>
@@ -286,8 +291,7 @@
   </action>
   <action name="actionAddInstance">
    <property name="icon">
-    <iconset theme="new">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="new"/>
    </property>
    <property name="text">
     <string>Add Instanc&amp;e...</string>
@@ -298,8 +302,7 @@
   </action>
   <action name="actionCheckUpdate">
    <property name="icon">
-    <iconset theme="checkupdate">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="checkupdate"/>
    </property>
    <property name="text">
     <string>&amp;Update...</string>
@@ -308,13 +311,12 @@
     <string>Check for new updates for %1.</string>
    </property>
    <property name="menuRole">
-    <enum>QAction::ApplicationSpecificRole</enum>
+    <enum>QAction::MenuRole::ApplicationSpecificRole</enum>
    </property>
   </action>
   <action name="actionSettings">
    <property name="icon">
-    <iconset theme="settings">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="settings"/>
    </property>
    <property name="text">
     <string>Setti&amp;ngs...</string>
@@ -323,13 +325,12 @@
     <string>Change settings.</string>
    </property>
    <property name="menuRole">
-    <enum>QAction::PreferencesRole</enum>
+    <enum>QAction::MenuRole::PreferencesRole</enum>
    </property>
   </action>
   <action name="actionManageAccounts">
    <property name="icon">
-    <iconset theme="accounts">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="accounts"/>
    </property>
    <property name="text">
     <string>&amp;Manage Accounts...</string>
@@ -337,8 +338,7 @@
   </action>
   <action name="actionLaunchInstance">
    <property name="icon">
-    <iconset theme="launch">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="launch"/>
    </property>
    <property name="text">
     <string>&amp;Launch</string>
@@ -349,8 +349,7 @@
   </action>
   <action name="actionKillInstance">
    <property name="icon">
-    <iconset theme="status-bad">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="status-bad"/>
    </property>
    <property name="text">
     <string>&amp;Kill</string>
@@ -364,8 +363,7 @@
   </action>
   <action name="actionRenameInstance">
    <property name="icon">
-    <iconset theme="rename">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="rename"/>
    </property>
    <property name="text">
     <string>Rename</string>
@@ -376,8 +374,7 @@
   </action>
   <action name="actionChangeInstGroup">
    <property name="icon">
-    <iconset theme="tag">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="tag"/>
    </property>
    <property name="text">
     <string>&amp;Change Group...</string>
@@ -399,8 +396,7 @@
   </action>
   <action name="actionEditInstance">
    <property name="icon">
-    <iconset theme="settings">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="settings"/>
    </property>
    <property name="text">
     <string>&amp;Edit...</string>
@@ -414,8 +410,7 @@
   </action>
   <action name="actionViewSelectedInstFolder">
    <property name="icon">
-    <iconset theme="viewfolder">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="viewfolder"/>
    </property>
    <property name="text">
     <string>&amp;Folder</string>
@@ -426,8 +421,7 @@
   </action>
   <action name="actionDeleteInstance">
    <property name="icon">
-    <iconset theme="delete">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="delete"/>
    </property>
    <property name="text">
     <string>Dele&amp;te</string>
@@ -441,8 +435,7 @@
   </action>
   <action name="actionCopyInstance">
    <property name="icon">
-    <iconset theme="copy">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="copy"/>
    </property>
    <property name="text">
     <string>Cop&amp;y...</string>
@@ -456,8 +449,7 @@
   </action>
   <action name="actionExportInstance">
    <property name="icon">
-    <iconset theme="export">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="export"/>
    </property>
    <property name="text">
     <string>E&amp;xport...</string>
@@ -468,8 +460,7 @@
   </action>
   <action name="actionExportInstanceZip">
    <property name="icon">
-    <iconset theme="launcher">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="launcher"/>
    </property>
    <property name="text">
     <string>Prism Launcher (zip)</string>
@@ -477,8 +468,7 @@
   </action>
   <action name="actionExportInstanceMrPack">
    <property name="icon">
-    <iconset theme="modrinth">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="modrinth"/>
    </property>
    <property name="text">
     <string>Modrinth (mrpack)</string>
@@ -486,8 +476,7 @@
   </action>
   <action name="actionExportInstanceFlamePack">
    <property name="icon">
-    <iconset theme="flame">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="flame"/>
    </property>
    <property name="text">
     <string>CurseForge (zip)</string>
@@ -495,8 +484,7 @@
   </action>
   <action name="actionCreateInstanceShortcut">
    <property name="icon">
-    <iconset theme="shortcut">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="shortcut"/>
    </property>
    <property name="text">
     <string>Create Shortcut</string>
@@ -507,8 +495,7 @@
   </action>
   <action name="actionNoAccountsAdded">
    <property name="icon">
-    <iconset theme="noaccount">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="noaccount"/>
    </property>
    <property name="text">
     <string>No accounts added!</string>
@@ -519,8 +506,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset theme="noaccount">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="noaccount"/>
    </property>
    <property name="text">
     <string>No Default Account</string>
@@ -531,8 +517,7 @@
   </action>
   <action name="actionCloseWindow">
    <property name="icon">
-    <iconset theme="status-bad">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="status-bad"/>
    </property>
    <property name="text">
     <string>Close &amp;Window</string>
@@ -541,13 +526,12 @@
     <string>Close the current window</string>
    </property>
    <property name="menuRole">
-    <enum>QAction::QuitRole</enum>
+    <enum>QAction::MenuRole::QuitRole</enum>
    </property>
   </action>
   <action name="actionViewInstanceFolder">
    <property name="icon">
-    <iconset theme="viewfolder">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="viewfolder"/>
    </property>
    <property name="text">
     <string>&amp;Instances</string>
@@ -558,8 +542,7 @@
   </action>
   <action name="actionViewLauncherRootFolder">
    <property name="icon">
-    <iconset theme="viewfolder">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="viewfolder"/>
    </property>
    <property name="text">
     <string>Launcher &amp;Root</string>
@@ -570,8 +553,7 @@
   </action>
   <action name="actionViewCentralModsFolder">
    <property name="icon">
-    <iconset theme="centralmods">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="centralmods"/>
    </property>
    <property name="text">
     <string>&amp;Central Mods</string>
@@ -582,8 +564,7 @@
   </action>
   <action name="actionViewSkinsFolder">
    <property name="icon">
-    <iconset theme="viewfolder">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="viewfolder"/>
    </property>
    <property name="text">
     <string>&amp;Skins</string>
@@ -594,8 +575,7 @@
   </action>
   <action name="actionViewIconsFolder">
    <property name="icon">
-    <iconset theme="viewfolder">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="viewfolder"/>
    </property>
    <property name="text">
     <string>Instance Icons</string>
@@ -606,8 +586,7 @@
   </action>
   <action name="actionViewLogsFolder">
    <property name="icon">
-    <iconset theme="viewfolder">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="viewfolder"/>
    </property>
    <property name="text">
     <string>Logs</string>
@@ -623,8 +602,7 @@
   </action>
   <action name="actionReportBug">
    <property name="icon">
-    <iconset theme="bug">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="bug"/>
    </property>
    <property name="text">
     <string>Report a Bug or Suggest a Feature</string>
@@ -635,8 +613,7 @@
   </action>
   <action name="actionDISCORD">
    <property name="icon">
-    <iconset theme="discord">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="discord"/>
    </property>
    <property name="text">
     <string>&amp;Discord Guild</string>
@@ -647,8 +624,7 @@
   </action>
   <action name="actionMATRIX">
    <property name="icon">
-    <iconset theme="matrix">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="matrix"/>
    </property>
    <property name="text">
     <string>&amp;Matrix Space</string>
@@ -659,8 +635,7 @@
   </action>
   <action name="actionREDDIT">
    <property name="icon">
-    <iconset theme="reddit-alien">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="reddit-alien"/>
    </property>
    <property name="text">
     <string>Sub&amp;reddit</string>
@@ -671,8 +646,7 @@
   </action>
   <action name="actionAbout">
    <property name="icon">
-    <iconset theme="about">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="about"/>
    </property>
    <property name="text">
     <string>&amp;About %1</string>
@@ -681,13 +655,12 @@
     <string>View information about %1.</string>
    </property>
    <property name="menuRole">
-    <enum>QAction::AboutRole</enum>
+    <enum>QAction::MenuRole::AboutRole</enum>
    </property>
   </action>
   <action name="actionClearMetadata">
    <property name="icon">
-    <iconset theme="refresh">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="refresh"/>
    </property>
    <property name="text">
     <string>&amp;Clear Metadata Cache</string>
@@ -698,8 +671,7 @@
   </action>
   <action name="actionAddToPATH">
    <property name="icon">
-    <iconset theme="custom-commands">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="custom-commands"/>
    </property>
    <property name="text">
     <string>Install to &amp;PATH</string>
@@ -710,8 +682,7 @@
   </action>
   <action name="actionFoldersButton">
    <property name="icon">
-    <iconset theme="viewfolder">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="viewfolder"/>
    </property>
    <property name="text">
     <string>Folders</string>
@@ -722,8 +693,7 @@
   </action>
   <action name="actionHelpButton">
    <property name="icon">
-    <iconset theme="help">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="help"/>
    </property>
    <property name="text">
     <string>Help</string>
@@ -734,8 +704,7 @@
   </action>
   <action name="actionAccountsButton">
    <property name="icon">
-    <iconset theme="noaccount">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="noaccount"/>
    </property>
    <property name="text">
     <string>Accounts</string>
@@ -743,8 +712,7 @@
   </action>
   <action name="actionOpenWiki">
    <property name="icon">
-    <iconset theme="help">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="help"/>
    </property>
    <property name="text">
     <string>%1 &amp;Help</string>
@@ -755,8 +723,7 @@
   </action>
   <action name="actionViewWidgetThemeFolder">
    <property name="icon">
-    <iconset theme="viewfolder">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="viewfolder"/>
    </property>
    <property name="text">
     <string>&amp;Widget Themes</string>
@@ -767,8 +734,7 @@
   </action>
   <action name="actionViewIconThemeFolder">
    <property name="icon">
-    <iconset theme="viewfolder">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="viewfolder"/>
    </property>
    <property name="text">
     <string>I&amp;con Theme</string>
@@ -779,8 +745,7 @@
   </action>
   <action name="actionViewCatPackFolder">
    <property name="icon">
-    <iconset theme="viewfolder">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="viewfolder"/>
    </property>
    <property name="text">
     <string>Cat Packs</string>
@@ -791,8 +756,7 @@
   </action>
   <action name="actionViewJavaFolder">
    <property name="icon">
-    <iconset theme="viewfolder">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="viewfolder"/>
    </property>
    <property name="text">
     <string>Java</string>
